What's New for PSPRadio 
========================
0.38-Pre3
NEW FEATURES

BUG FIXES
(sandberg) Core/3DUI: Rearranged the order of the VBlank operations to remove some of the jitter on the UI. (r745)

0.38-Pre2
NEW FEATURES
(sandberg) Core: Added support for logging via WiFi instead of using the memorystick. (r729)
(sandberg) External: Added a simple server application which can receive the log-entries via WiFi on the PC. (r729)
(sandberg) 3DUI: A new popup dialog has been added to show error messages from PSPRadio. (r732)
(raf) Core: Next/Prev via HPRM are now global (r733)
(raf) TextUI: Updated skins from Semtex199 (r733)
(raf) Core: Added new playmode "GLOBAL". When on this mode, when the last track of an album finishes, the player goes to the first track of the next album. (r734)
(raf) Core: Updated SHOUTcast db.xml to lastest as of 1-26-06 (r736)
(raf) Core: Added support for ID3 tags (v1 and v2) (r738/739)
(raf) Core: Made Playback mode a config item in PSPRadio.cfg. Now its saved with the other config options. Make sure you update your PSPRadio.cfg for this to work.
BUG FIXES
(sandberg) 3DUI: The active item are now default selected when entering the option screen. (r728)
(sandberg) 3DUI: The program version is now only shown on the option screen when using the 3D UI (r727)
(sandberg) 3DUI: Fixed a couple of bug which caused the UI to read random data. (r730)
(sandberg) Core: Added check for buffer event, so they are only sent when there are changes. (r731)
(raf) Core: Fixed bug where HPRM would crash the localfiles screen (r733)
(raf) TextUI: Corrected problem where 12AM was being displayed as 00AM (r734)

0.38-Pre1 (r726) (2006-01-20)
NEW FEATURES
(sandberg) Core/3DUI: Merged the new TextUI3D into the main branch. (r712)
(sandberg) Core: Support for USB enabled/disabled events to the UIs has been added. (r712)
(raf) Core: Added code to sort all lists (localfiles/playlists/SHOUTcast listings) alphabetically in ascending order (r713)