@@ -30,6 +30,8 @@ LIST_COLOR_NOT_SELECTED=66FFFF;
 SONGTITLE_XY=113,14;
 SONGTITLE_WIDTH=236;
 SONGTITLE_COLOR=444488;
+ERROR_COLOR=FF0000;
+MESSAGE_COLOR=4466FF;
 
 [GRAPHICS]
 GFX_WIFI_SIZE=64,16;
